WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192349
Device orientation may be wrong on page reload after crash
https://bugs.webkit.org/show_bug.cgi?id=192349
Summary
Device orientation may be wrong on page reload after crash
youenn fablet
Reported
2018-12-03 20:20:55 PST
Device orientation may be wrong on page reload after crash
Attachments
Patch
(4.31 KB, patch)
2018-12-03 20:23 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-12-03 20:21:06 PST
<
rdar://problem/46359466
>
youenn fablet
Comment 2
2018-12-03 20:23:34 PST
Created
attachment 356452
[details]
Patch
WebKit Commit Bot
Comment 3
2018-12-04 10:12:18 PST
Comment on
attachment 356452
[details]
Patch Clearing flags on attachment: 356452 Committed
r238857
: <
https://trac.webkit.org/changeset/238857
>
WebKit Commit Bot
Comment 4
2018-12-04 10:12:19 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug