Device orientation may be wrong on page reload after crash https://bugs.webkit.org/show_bug.cgi?id=192349 <rdar://problem/46359466>

Reviewed by Eric Carlson.

On page crash, the process is relaunched and the page is reloaded.
At that point, the orientation information of the page is not reset until the next device orientation change.
To fix that, add the device orientation to the page creation parameters so that we pass it everytime we create a page.
Covered by manual testing.

* Shared/WebPageCreationParameters.cpp:
(WebKit::WebPageCreationParameters::encode const):
(WebKit::WebPageCreationParameters::decode):
* Shared/WebPageCreationParameters.h:
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::creationParameters):
* WebProcess/WebPage/WebPage.cpp:


Canonical link: https://commits.webkit.org/206996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238857 268f45cc-cd09-0410-ab3c-d52691b4dbfc